example/kubernetes_only_for_all/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # Удалите или закомментируйте эту строку:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
